# DATATHON-2026-r1

./: .gitignore  README.md  pyproject.toml  report.tex
data/raw/: schema.md
models/: 03_1_baseline_config.json  03_1_optimized_baseline_config.json  03_1_residual_baseline_config.json  03_1_residual_ensemble_config.json  03_2_ensemble_model_config.json  03_sales_forecast_model_config.json
notebooks/: 01_mcq.ipynb  01mcq.ipynb  02.1_fact_table.ipynb  02_eda.ipynb  02_eda_old.ipynb  03.1_forcast_v2.ipynb  03.1_timeseries_forecasting.ipynb  03.2_forcast_improve.ipynb  03.3_revenue_forecast.ipynb  03_sale_forecast_baseline.ipynb  Demand-side.ipynb  Supply-side.ipynb  Synthesis.ipynb  stockout-overstock.ipynb
reports/latex/: main.tex  neurips_2025.sty - Shortcut.lnk  ref.bib
reports/tables/: 03_1_baseline_forecast_summary.csv  03_1_baseline_validation_results.csv  03_1_optimized_baseline_calibration.csv  03_1_optimized_baseline_validation_results.csv  03_1_optimized_baseline_weights.csv  03_1_residual_baseline_weights.csv  03_1_residual_ensemble_calibration.csv  03_1_residual_ensemble_feature_importance.csv  03_1_residual_ensemble_validation_results.csv  03_1_residual_feature_importance.csv  03_2_ensemble_weights.csv  (+20 more)
submissions/: submission_03_1_baseline_B_mean_364_365_366.csv  submission_03_1_baseline_D_weighted.csv  submission_03_1_optimized_baseline.csv  submission_03_1_residual_baseline.csv  submission_03_1_residual_ensemble.csv  submission_03_2_ensemble_forecast.csv  submission_03_sales_forecast.csv  submission_04_tiered_ensemble.csv  submission_forecast.csv
(+1 files in other folders)
